[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
petgraph = "0.6.0"

# Better performance than std and tokio
crossbeam-channel = "0.5"

nanoid = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }

tokio = { version = "1", features = ["full"] }

async-trait = "0.1.53"