[package]
name = "cascade_core"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6.4"
log = "0.4.20"

tokio = { version = "1.32.0", features = ["time", "sync"] }
async-channel = "1.9.0"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

cascade_api = { path = "../cascade_api" }
