[package]
name = "cascade_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# todo Bot hshould be removable
tokio = "1.32.0"
petgraph = "0.6.4"

hyper = { version = "0.14.18", features = [
    "http1",
    "server",
    "stream",
    "runtime",
] }
url = { version = "2.4.1" }

cascade_core = { path = "../cascade_core" }
cascade_connection = { path = "../cascade_connection" }
cascade_component = { path = "../cascade_component" }
cascade_component_std = { path = "../cascade_component_std" }
