[package]
name = "cascade_integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

cascade_core = { path = "../cascade_core" }
cascade_api = { path = "../cascade_api" }
cascade_component_std = { path = "../cascade_component_std" }
